--- a/templates/user/shop.html.twig
+++ b/templates/user/shop.html.twig
@@ -1,22 +1,23 @@
 {% extends "user/layout_user.html.twig" %}
 {% block body %}
-    <div class="container">
+    <div class="container" style="text-align: center">
         <div class="row">
-            <div class="container-xs col-sm-8" style="background-color: #ffd3b8;border-radius:10px;">
-                <br><h4>Sac à dos</h4>
-                <div class="container-xl" style="background-color: #ffd3b8;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
-                    <br>
-                    <div> Argent : {{ argent }} <img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="coin"></div>
+            <div class="container-xs col-sm-12" style="background-color: #ffd3b8;border-radius:10px;text-align: center">
+                <br><h1>Sac à dos</h1>
+                <br>
+                <div> Argent : {{ argent }} <img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="coin"></div>
+                <br>
+                <h4>Vendre des items :</h4><br>
+                <div class="container-fluid" style="background-color: #ffd3b8;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
                     <div class="row">
                         <!-- Afficher tous les objets de User + bouton pour vendre qui envoie l'id de l'objet, son groupe et aussi l'id de l'inventaire -->
                         {% for key,group in inventory %}
                             {% for item in group %}
-                                <div class="col-1">
+                                <div class="col-2">
                                     {%  if item.sprite is not empty %}
-                                        <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
-                                    {% endif %}
-                                    <div>{{ item.prix }} <img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="coin"></div><br>
-                                    <a href="{{ path('shop.sell', {id: item.id, group: key, inventID: item.inventID} )}}" class="btn btn-success">Sell</a>
+                                        <img class="img-fluid rounded"  style="width:75px;height:75px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                                    {% endif %}<br>
+                                    <a href="{{ path('shop.sell', {id: item.id, group: key, inventID: item.inventID} )}}" class="btn btn-warning">{{ item.prix - (item.prix*20/100)}} <img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="coin"></a>
                                 </div>
                             {% endfor %}
                         {% endfor %}
@@ -25,27 +26,69 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            {% for key,group in items  %}
-                {% for item in group %}
-                <div class="col-4 mt-4">
-                    <div class="border border-dark rounded p-2 clearfix">
-                        <h5>
-                            {{ item.nom }}
-                        </h5>
-                        <div style="font-size: medium">
-                            &emsp; {{ item.prix }}g l'unité
-                        </div>
+        <br><br><br>
 
+        <h3>Armes</h3>
+        <div class="row">
+            <br>
+            {% for item in armes %}
+                <div class="col-2 mt-4">
+                    <div class="border border-dark rounded p-2 clearfix">
+                        <h6>
+                            {{ item.nom }}
+                        </h6>
                         {%  if item.sprite is not empty %}
-                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/armes/')}}{{item.sprite}}"  alt="image  de {{ item.nom }}" >
                         {% endif %}
                         <hr>
-                        <a href="{{ path('shop.buy', {id: item.id, group: key} )}}" class="btn btn-success
-                           {% if app.user.argent < item.prix %}disabled{% endif %}" >Buy</a>
+                        <a href="{{ path('shop.buyArme', {id: item.id} )}}" class="btn btn-success
+                           {% if app.user.argent < item.prix %}disabled{% endif %}" >{{ item.prix }}<img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="gold"></a>
                     </div>
                 </div>
-                {% endfor %}
+            {% endfor %}
+            <br>
+        </div>
+        <br><br><br>
+
+        <h3>Armures</h3>
+        <div class="row">
+            <br>
+            {% for item in armures %}
+                <div class="col-2 mt-4">
+                    <div class="border border-dark rounded p-2 clearfix">
+                        <h6>
+                            {{ item.nom }}
+                        </h6>
+                        {%  if item.sprite is not empty %}
+                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/armures/')}}{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                        {% endif %}
+                        <hr>
+                        <a href="{{ path('shop.buyArmure', {id: item.id} )}}" class="btn btn-success
+                           {% if app.user.argent < item.prix %}disabled{% endif %}" >{{ item.prix }}<img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="gold"></a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <br><br><br>
+
+        <h3>Potions</h3>
+        <div class="row">
+            <br>
+            {% for item in potions %}
+                <div class="col-2 mt-4">
+                    <div class="border border-dark rounded p-2 clearfix">
+                        <h6>
+                            {{ item.nom }}
+                        </h6>
+
+                        {%  if item.sprite is not empty %}
+                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/potions/')}}{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                        {% endif %}
+                        <hr>
+                        <a href="{{ path('shop.buyPotion', {id: item.id} )}}" class="btn btn-success
+                           {% if app.user.argent < item.prix %}disabled{% endif %}">{{ item.prix }}<img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="gold"></a>
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
